[package]
name = "langview"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "langview"
path = "src/main.rs"

[dependencies]
clap = { version = "3.0", features = ["derive"] }
gtk = { version = "0.9", features = ["v3_22"] }
gdk = "0.13"
gio = "0.9"
sourceview = "0.9"
relm = "0.21"
relm-derive = "0.22"
tempfile = "3.3"
crossbeam-channel = "0.4.0"
notify = "5.0.0-pre.13"
futures = "0.3"
